--- a/Crome_JS_Server_V0.1/main.css
+++ b/Crome_JS_Server_V0.1/main.css
@@ -9,9 +9,30 @@ div.windowMain {
     left: 0px;
 }
 
+div.player {
+    display: fixed;
+    align-content: center;
+    background-color: rgb(200, 225, 150);
+    position: relative;
+    width: 100%;
+    height: 200px;
+    top: 0px;
+    left: 0px;
+}
+
+div.deviceConfig {
+    display: fixed;
+    background-color: rgb(59, 91, 68);
+    width: 100%; 
+    height: 100%;
+    align-content: center; 
+    justify-content: center; 
+    overflow-y: scroll;
+}
+
 div.windowRightBar {
     display: fixed;
-    background-color: rgb(116, 115, 117);
+    background-color: rgb(67, 2, 133);
     position: fixed;
     width: 50%; 
     height: 100%;
@@ -19,7 +40,26 @@ div.windowRightBar {
     left: 50%;
     align-content: center; 
     justify-content: center; 
-    overflow: scroll;
+}
+div.deviceSelectMenu {
+    display: fixed;
+    background-color: rgb(167, 111, 111);
+    position: relative;
+    width: 100%; 
+    height: 50px;
+    top: 0px;
+    align-content: center; 
+    justify-content: center; 
+}
+
+div.deviceSelectList {
+    display: fixed;
+    background-color: rgb(115, 117, 178);
+    width: 100%; 
+    height: 100%;
+    align-content: center; 
+    justify-content: center; 
+    overflow-y: scroll;
 }
 
 div.deviceDiv {
