--- a/Chrome_JS_Server_V2.0/my-app/src/app.css
+++ b/Chrome_JS_Server_V2.0/my-app/src/app.css
@@ -4,39 +4,39 @@
 @tailwind utilities;
 
 @layer components {
-    .button-player-green{
-        @apply bg-btn-green-default hover:bg-btn-green-hover  text-white font-bold py-1 pl-1 pr-2 rounded-md my-1 flex flex-row justify-start;
-    }
-    .button-player-red{
-        @apply bg-btn-red-default hover:bg-btn-red-hover  text-white font-bold py-1 pl-1 pr-2 rounded-md my-1 flex flex-row backdrop:justify-start;
-    }
+	.button-player-green {
+		@apply bg-btn-green-default hover:bg-btn-green-hover  text-white font-bold py-1 pl-1 pr-2 rounded-md my-1 flex flex-row justify-start;
+	}
+	.button-player-red {
+		@apply bg-btn-red-default hover:bg-btn-red-hover  text-white font-bold py-1 pl-1 pr-2 rounded-md my-1 flex flex-row backdrop:justify-start;
+	}
 
-    .li-player-io{
-        @apply bg-gray-dark border-b border-gray-500 text-center text-sm hover:bg-gray-700;
-    }
+	.li-player-io {
+		@apply bg-gray-dark border-b border-gray-500 text-center text-sm hover:bg-gray-700;
+	}
 
-    .li-player-song{
-        @apply flex justify-between py-3 pl-6 pr-2 rounded-md select-none;
-    }
+	.li-player-song {
+		@apply flex justify-between py-3 pl-6 pr-2 rounded-md select-none;
+	}
 }
 
 @layer utilities {
-    .dev-div-outline{
-        @apply border border-green-900 border-4 rounded 
+	.dev-div-outline {
+		@apply border border-green-900 border-4 rounded 
         bg-gray-light;
-        border-style: solid;
-    }
-    .div-outline{
-        @apply border border-gray-light border-4 
-       m-2 rounded-xl
+		border-style: solid;
+	}
+	.div-outline {
+		@apply border border-gray-light border-4 
+       m-2 rounded-3xl
         bg-gray-light;
-        border-style: solid;
-    }
-    .dev-div-grid{
-        @apply border border-red-900 border-4 rounded
+		border-style: solid;
+	}
+	.dev-div-grid {
+		@apply border border-red-900 border-4 rounded
         bg-gray-dark;
-    }
-    .div-grid{
-        @apply  bg-gray-dark;
-    }
+	}
+	.div-grid {
+		@apply bg-gray-dark;
+	}
 }
